force-app/main/default/objects/Case_Ext_DoI__c.object
<CustomObject>
    <description>Additional case fields for the Declaration of Interest forms</description>
    <fields>
        <fullName>Blank_Space__c</fullName>
        <description>Blank space for the UI

The label is an ALT-255</description>
        <label>​ </label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Country_of_Ownership__c</fullName>
        <description>Country of registration of the organisation country</description>
        <label>Country of Ownership</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Enquiry__c</fullName>
        <description>Parent Enquiry for the declaration of interest record</description>
        <label>Enquiry</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case.RecordType.Name</field>
                <operation>equals</operation>
                <value>Declaration of Interest</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Extensions - DoI</relationshipLabel>
        <relationshipName>Declaration_of_Interest</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CE_Entity_Name__c</fullName>
        <description>The name of the company, organisation, individual or group this interest is regarding</description>
        <label>Entity Name</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CE_Management_Plan_Triggers__c</fullName>
        <description>The sections that have led to an automatic management plan required status. Additional sections may have been populated that did not influence the status.</description>
        <label>Management Plan Triggers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial or outside work</fullName>
                </value>
                <value>
                    <fullName>Competing professional interests</fullName>
                </value>
                <value>
                    <fullName>Foreign affiliations &amp; associations</fullName>
                </value>
                <value>
                    <fullName>Gifts, Benefits, &amp; Hospitality</fullName>
                </value>
                <value>
                    <fullName>Other Interests</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Recruitment, Supervision &amp; Teaching</fullName>
                </value>
                <value>
                    <fullName>Research &amp; Commercialisation</fullName>
                </value>
                <value>
                    <fullName>Self Identified Conflict of Interest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CE_Name__c</fullName>
        <description>Alternative field to the auto number</description>
        <formula>HYPERLINK(&apos;/&apos;+Id, CE_Enquiry__r.CaseNumber + &apos;/&apos; + text(CE_Enquiry__r.Category_Level_1__c) , &apos;_self&apos; )</formula>
        <label>Name (L)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Type_of_Organisation__c</fullName>
        <description>Populated by a picklist on the form</description>
        <label>Type of Organisation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COW_Annual_Earnings__c</fullName>
        <inlineHelpText>Do your annual earnings for this role exceed AUD$10,000</inlineHelpText>
        <label>Annual Earnings</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COW_Associated_Business__c</fullName>
        <description>2. Commercial and financial interests or outside</description>
        <inlineHelpText>Does the University do business with the organisation? This includes circumstances where the entity receives payment from or made payment to, Monash University or an entity controlled by Monash University.</inlineHelpText>
        <label>Associated Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COW_Business_Nature__c</fullName>
        <description>2. Commercial and financial interests or outside</description>
        <inlineHelpText>What is the nature of the business?</inlineHelpText>
        <label>Business Nature</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COW_Com_Fin_Summary__c</fullName>
        <description>2. Please provide further details of your commercial or financial interest</description>
        <inlineHelpText>Please provide further details of your commercial or financial interest</inlineHelpText>
        <label>Commercial Financial Summary</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COW_Commercial_Financial_or_OutsideWork__c</fullName>
        <description>2. Commercial and financial interests or outside</description>
        <inlineHelpText>Does this organisation relate to your commercial or financial Interest, or outside work and other commitments, or both?</inlineHelpText>
        <label>Commercial/Financial or Outside Work</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial or financial interests</fullName>
                </value>
                <value>
                    <fullName>Outside work and other commitments</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COW_Commitment_Hours__c</fullName>
        <description>2. Time spent on the work commitment (hours)</description>
        <inlineHelpText>Time spent on the work commitment (hours)</inlineHelpText>
        <label>Commitment Hours</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COW_Commitment_Period__c</fullName>
        <description>2. Commitment Period, giving context to Commitment Hours</description>
        <inlineHelpText>Commitment Period</inlineHelpText>
        <label>Commitment Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COW_Commitment_f__c</fullName>
        <description>2. Time spent on the work commitment (hours)</description>
        <formula>TEXT(COW_Commitment_Hours__c) + &quot;hrs / &quot; + TEXT(COW_Commitment_Period__c)</formula>
        <inlineHelpText>Time spent on the work commitment (hours)</inlineHelpText>
        <label>Commitment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COW_End_Date__c</fullName>
        <description>2. Dates of employment or position held</description>
        <inlineHelpText>Dates of employment or position held (end)</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COW_End_Date_f__c</fullName>
        <description>System field for UI</description>
        <formula>if(  ISBLANK(COW_End_Date__c),&quot;Work is ongoing&quot;,&quot;Work has ceased&quot;)</formula>
        <label>End Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COW_Entity_Controlled__c</fullName>
        <inlineHelpText>Is this entity wholly or jointly controlled (arrangements which result in equal or majority shareholding with equal or majority voting rights) by you or related parties?</inlineHelpText>
        <label>Entity Controlled (Wholly/Jointly)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COW_Entity_MU_Contingency__c</fullName>
        <inlineHelpText>Have any entities controlled or jointly controlled by you or related parties committed to a transaction contingent upon whether an event occurs or does not occur in the future, with Monash University or an entity controlled by Monash University?</inlineHelpText>
        <label>Entity Contingent MU Transaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COW_Fiduciary_Management__c</fullName>
        <description>2. Have you served in the fiduciary or management role in the past twelve months?</description>
        <inlineHelpText>Have you served in the fiduciary or management role in the past twelve months?</inlineHelpText>
        <label>Fiduciary/Management role?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COW_Financial_Interest_Type__c</fullName>
        <description>2. What is the nature of your financial interest?</description>
        <inlineHelpText>What is the nature of your financial interest?</inlineHelpText>
        <label>Financial Interest Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equity interests or entitlement of any amount in a non-publicly traded for-profit entity</fullName>
                </value>
                <value>
                    <fullName>Equity or other financial interests over $5,000 ($AUD)</fullName>
                </value>
                <value>
                    <fullName>Financial compensation exceeding $5,000 ($AUD)</fullName>
                </value>
                <value>
                    <fullName>Intellectual property rights and interests</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COW_Financial_Interest_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>2. What is the approximate value of your interest in the entity?</description>
        <inlineHelpText>What is the approximate value of your interest in the entity?</inlineHelpText>
        <label>Financial Interest Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>COW_Further_Summary__c</fullName>
        <description>2. Please provide further details of your interest</description>
        <inlineHelpText>Please provide further details of your interest</inlineHelpText>
        <label>Further Summary</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COW_IP_Summary__c</fullName>
        <description>2. What is the nature of the intellectual property?</description>
        <inlineHelpText>What is the nature of the intellectual property?</inlineHelpText>
        <label>Intellectual Property Summary</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COW_Involvement_Details__c</fullName>
        <inlineHelpText>To any extent not already disclosed, please explain your involvement</inlineHelpText>
        <label>Involvement Details</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COW_Involvement_Type__c</fullName>
        <description>2. Commercial and financial interests or outside</description>
        <inlineHelpText>Please select the situation/s that apply to you</inlineHelpText>
        <label>Involvement Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Honorific title</fullName>
                </value>
                <value>
                    <fullName>Immediate family member or business partner&apos;s commercial or financial interests</fullName>
                </value>
                <value>
                    <fullName>Member of talent recruitment program</fullName>
                </value>
                <value>
                    <fullName>Other obligations, not listed above</fullName>
                </value>
                <value>
                    <fullName>Position or Beneficiary in a trust, advisory council or other body</fullName>
                </value>
                <value>
                    <fullName>Receive significant financial compensation</fullName>
                </value>
                <value>
                    <fullName>Shareholder</fullName>
                </value>
                <value>
                    <fullName>Own intellectual property</fullName>
                </value>
                <value>
                    <fullName>Fiduciary/management role</fullName>
                </value>
                <value>
                    <fullName>Paid or unpaid employee</fullName>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                </value>
                <value>
                    <fullName>Contractor or consultant</fullName>
                </value>
                <value>
                    <fullName>Immediate family member or business partner&apos;s interests</fullName>
                    <isActive>false</isActive>
                    <label>Immediate family member or business partner&apos;s interests</label>
                </value>
                <value>
                    <fullName>Other, not listed above</fullName>
                    <isActive>false</isActive>
                    <label>Other, not listed above</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COW_Involvement__c</fullName>
        <description>2. Commercial and financial interests or outside</description>
        <inlineHelpText>Are you directly or indirectly involved in any business between the organisation and the University?</inlineHelpText>
        <label>Business-University Involvement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COW_Position_Details__c</fullName>
        <inlineHelpText>Please provide a summary of the position, including any obligations associated with the title</inlineHelpText>
        <label>Position Details</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COW_Recent_Position__c</fullName>
        <inlineHelpText>At any stage in the last 12 months, did you or a member of your family hold a position in a trust (including as trustee), advisory council or other body?</inlineHelpText>
        <label>Recent Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COW_Related_Industry__c</fullName>
        <description>2. Commercial and financial interests or outside</description>
        <inlineHelpText>Do their products, services or business relate to your area of teaching or research at the University?</inlineHelpText>
        <label>Related Industry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COW_Removed_Involvement_Summary__c</fullName>
        <description>2. Please provide further details of your immediate family member or business partner&apos;s commercial or financial interest
Screen reader support enabled.
 
 
 		
Please provide further details of your immediate family member or business partner&apos;s commercial or financial interest</description>
        <inlineHelpText>Please provide further details of your immediate family member or business partner&apos;s commercial or financial interest</inlineHelpText>
        <label>Removed Involvement Summary</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COW_Removed_Involvement__c</fullName>
        <description>2. Is your immediate family member or business partner directly or indirectly involved in any business between the organisation and the University?</description>
        <inlineHelpText>Is your immediate family member or business partner directly or indirectly involved in any business between the organisation and the University?</inlineHelpText>
        <label>Removed Bus-Uni Involvement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COW_Section__c</fullName>
        <description>2. Commercial and financial interests or outside</description>
        <inlineHelpText>Do you, or an immediate family member or business partner, have a commercial or financial interest in a related outside entity? 

OR 

Do you undertake any outside work or other commitments that use the same skills and qualifications you use in your position at Monash University?</inlineHelpText>
        <label>Commercial or outside work</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COW_Start_Date__c</fullName>
        <description>2. Dates of employment or position held</description>
        <inlineHelpText>Dates of employment or position held (start)</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COW_Trust_Advisory_Other__c</fullName>
        <inlineHelpText>Please provide details of the Name of Trust(s), Advisory Council(s) or Other Body(s)</inlineHelpText>
        <label>Trust Name</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COW_Trust_Beneficiary_Details__c</fullName>
        <inlineHelpText>Please provide details</inlineHelpText>
        <label>Trust Beneficiary Details</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COW_Trust_Beneficiary__c</fullName>
        <inlineHelpText>Were you a beneficiary of a trust or trusts?</inlineHelpText>
        <label>Trust Beneficiary</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COW_Trust_Position_Held__c</fullName>
        <inlineHelpText>What is the nature of the position(s)?</inlineHelpText>
        <label>Trust Position</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>COW_Work_Summary__c</fullName>
        <description>2. Details of the work or commitment</description>
        <inlineHelpText>Details of the work or commitment</inlineHelpText>
        <label>Work Summary</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CPI_Assessment_Benefits__c</fullName>
        <description>In relation to this interest, do you have the opportunity to chair, or hold a deciding vote, on assessment panels that have the potential to give preference to the professional interests of yourself, a ‘close personal relationship’, your business unit or research group?</description>
        <inlineHelpText>Do you have the opportunity to chair, or hold a deciding vote, on assessment panels that have the potential to give preference to you?</inlineHelpText>
        <label>Assessment Panel or Chair Benefits</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPI_Beneficial_Authority__c</fullName>
        <description>In relation to this interest, do you have decision making authority, individually or as part of a group, committee or panel, where you also have the potential to benefit directly from those decisions?</description>
        <inlineHelpText>Do you have decision making authority where you also have the potential to benefit directly from those decisions?</inlineHelpText>
        <label>Beneficial Authority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPI_Competing_Authority__c</fullName>
        <description>Within your role(s) at Monash, do you have decision-making authorities relating to this interest that could compete with each other?</description>
        <inlineHelpText>Within your role(s) at Monash, do you have decision-making authorities relating to this interest that could compete with each other?</inlineHelpText>
        <label>Competing Authority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPI_Section__c</fullName>
        <description>5. Competing professional interests</description>
        <inlineHelpText>Do you hold a range of responsibilities within your role at Monash University, that may give rise to competing or conflicting professional interests?</inlineHelpText>
        <label>Competing professional interests</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPI_Summary__c</fullName>
        <description>Please describe the situation of your competing professional interest in further detail</description>
        <inlineHelpText>Please describe the situation of your competing professional interest in further detail</inlineHelpText>
        <label>Summary</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Endorse_Comments__c</fullName>
        <label>Endorse Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Escalation_Comments__c</fullName>
        <label>Escalation Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FAA_Financial_Support_Summary__c</fullName>
        <description>1. Please provide a summary of the type of financial support (e.g. name of the funding program, period of the funding, type of support received)</description>
        <inlineHelpText>Please provide a summary of the type of financial support (e.g. name of the funding program, period of the funding, type of support received)</inlineHelpText>
        <label>Financial Support Summary</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FAA_Financial_Support__c</fullName>
        <description>1. Are you receiving any financial support (cash or in-kind) for education or research-related activities from this organisation?</description>
        <inlineHelpText>Are you receiving any financial support (cash or in-kind) for education or research-related activities from this organisation?</inlineHelpText>
        <label>Financial Support?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FAA_Obligation__c</fullName>
        <description>1. Do you hold a position (paid or unpaid) or honorific titles, or are you under any other obligations to this organisation (e.g. membership of a talent recruitment program)?</description>
        <inlineHelpText>Do you hold a position (paid or unpaid) or honorific titles, or are you under any other obligations to this organisation (e.g. membership of a talent recruitment program)?</inlineHelpText>
        <label>Do you have an obligation?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FAA_Position_Summary__c</fullName>
        <label>Position Summary</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FAA_Section__c</fullName>
        <description>1. Foreign affiliations and associations</description>
        <inlineHelpText>Do you have, or in the last 5 years have you had, any affiliations or associations with a foreign entity?</inlineHelpText>
        <label>Foreign affiliations &amp; associations</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FAA_Summary__c</fullName>
        <description>1. Please provide a summary of the position, including any obligations associated with the title
or
Please provide details of your association/affiliation (e.g. period and nature of the affiliation)</description>
        <inlineHelpText>Please provide a summary of the position or association/affiliation with the Organisation</inlineHelpText>
        <label>Summary</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GBH_Benefactor_Location__c</fullName>
        <label>Benefactor Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBH_Interest_AcceptedDeclined__c</fullName>
        <description>Did you accept or decline the gift, benefit or hospitality?</description>
        <inlineHelpText>Did you accept or decline the gift, benefit or hospitality?</inlineHelpText>
        <label>Interest Accepted/Declined</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I accepted</fullName>
                </value>
                <value>
                    <fullName>I declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GBH_Interest_Circumstance__c</fullName>
        <description>Please provide a brief outline of the circumstances in which the gift was provided</description>
        <inlineHelpText>Please provide a brief outline of the circumstances in which the gift was provided</inlineHelpText>
        <label>Interest Circumstance</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GBH_Interest_Reported__c</fullName>
        <description>In relation to this interest, did you report the accepted or declined gift, benefit or hospitality in accordance with the gifts, benefits and hospitality procedure?</description>
        <inlineHelpText>In relation to this interest, did you report the accepted or declined gift, benefit or hospitality in accordance with the gifts, benefits and hospitality procedure?</inlineHelpText>
        <label>Interest Reported</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GBH_Interest_Summary__c</fullName>
        <description>Describe the gift, benefit or hospitality</description>
        <inlineHelpText>Describe the gift, benefit or hospitality</inlineHelpText>
        <label>Interest Summary</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GBH_Interest_Value__c</fullName>
        <description>The estimated value of gift, benefit or hospitality</description>
        <inlineHelpText>The estimated value of gift, benefit or hospitality</inlineHelpText>
        <label>Interest Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$500 -$1000 AUD</fullName>
                </value>
                <value>
                    <fullName>$1001 - $5000 AUD</fullName>
                </value>
                <value>
                    <fullName>$5001+ AUD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GBH_Relationship_to_Benefactor__c</fullName>
        <description>What is your connection to the individual who offered the gift, benefit or hospitality?
What is your connection to the entity who offered the gift, benefit or hospitality?</description>
        <label>Relationship to Benefactor</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>